--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
         </div>
 
         <section class="system-selection">
-            <a href="teacher-login.html" class="system-mini-card">
+            <a href="https://sgs.bopp-obec.info/sgs" class="system-mini-card">
                 <div class="sys-icon-small" style="background-color: var(--primary);"><i class="fas fa-chalkboard-teacher"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับครู</span>
+                <span style="font-weight: 700;">ระบบ SGS สำหรับครู</span>
             </a>
-            <a href="student-login.html" class="system-mini-card">
+            <a href="https://sgs.bopp-obec.info/sgss" class="system-mini-card">
                 <div class="sys-icon-small" style="background-color: #00a8ff;"><i class="fas fa-user-graduate"></i></div>
-                <span style="font-weight: 700;">ระบบสำหรับนักเรียน</span>
+                <span style="font-weight: 700;">ระบบ SGS สำหรับนักเรียน</span>
             </a>
         </section>
 
