--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
         <div class="system-announcement">
             <i class="fas fa-info-circle"></i>
             <div class="announcement-content">
-                <strong>ขณะนี้ระบบอยู่ระหว่างการทดสอบ (System Testing)</strong>
-                <span>ขออภัยในความไม่สะดวก ข้อมูลบางส่วนอยู่ระหว่างการปรับปรุงเพื่อความสมบูรณ์ของระบบทะเบียน</span>
+                <strong>ระบบอยู่ระหว่างการทดสอบ (System Testing)</strong>
+                <span>ประกาศปิดโดเมนระบบเก่า ตั้งแต่ 24/01/69 หลัง 24.00 น. เป็นต้นไป</span>
             </div>
         </div>
 
